- Fixed the issue with the header disappearing behind content - Fixed the hamburger menu items not being displayed properly - TO-DO: Fix the footer

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,13 @@
   flex-direction: column;
   align-items: center;
   width: 90vw;
-  height: 120vh;
+  height: 150vh;
   padding: 0;
   margin: auto;
+}
+
+#main-content {
+  height: 50vh;
 }
 
 body {
@@ -19,6 +23,7 @@ header {
   color:  #333333;
   width: 100%;
   margin: 0;
+  height: 50vh;
   overflow-x: hidden;
 }
 
@@ -29,6 +34,9 @@ nav {
 footer {
   color:  #333333;
   text-align: center;
+  height: 10vh;
+  position: absolute;
+  bottom: 0;
 }
 
 #hero {
